--- a/GTG/gtk/preferences.glade
+++ b/GTG/gtk/preferences.glade
@@ -209,7 +209,103 @@
                           </object>
                           <packing>
                             <property name="expand">False</property>
-                            <property name="position">2</property>
+                            <property name="position">3</property>
+                          </packing>
+                        </child>
+                        <child>
+                          <object class="GtkFrame" id="prefs-frame4">
+                            <property name="visible">True</property>
+                            <property name="label_xalign">0</property>
+                            <property name="shadow_type">none</property>
+                            <child>
+                              <object class="GtkAlignment" id="prefs-alignment3">
+                                <property name="visible">True</property>
+                                <property name="bottom_padding">15</property>
+                                <property name="left_padding">12</property>
+                                <child>
+                                  <object class="GtkVBox" id="prefs-vbox5">
+                                    <property name="visible">True</property>
+                                    <child>
+                                      <object class="GtkHBox" id="prefs-search-hbox2">
+                                        <property name="no_show_all">True</property>
+                                        <child>
+                                          <object class="GtkLabel" id="label-search-color">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">0.079999998211860657</property>
+                                            <property name="label" translatable="yes">Search color</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkColorButton" id="colorbutton1">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="receives_default">True</property>
+                                            <property name="color">#2554c48c0e08</property>
+                                          </object>
+                                          <packing>
+                                            <property name="expand">False</property>
+                                            <property name="fill">False</property>
+                                            <property name="padding">11</property>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="padding">3</property>
+                                        <property name="position">0</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkHBox" id="prefs-search-hbox1">
+                                        <property name="no_show_all">True</property>
+                                        <child>
+                                          <object class="GtkLabel" id="label-search-history">
+                                            <property name="visible">True</property>
+                                            <property name="xalign">0.25</property>
+                                            <property name="label" translatable="yes">Number os searches to save</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">0</property>
+                                          </packing>
+                                        </child>
+                                        <child>
+                                          <object class="GtkEntry" id="entry1">
+                                            <property name="visible">True</property>
+                                            <property name="can_focus">True</property>
+                                            <property name="invisible_char">&#x25CF;</property>
+                                            <property name="width_chars">2</property>
+                                          </object>
+                                          <packing>
+                                            <property name="position">1</property>
+                                          </packing>
+                                        </child>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="padding">3</property>
+                                        <property name="position">1</property>
+                                      </packing>
+                                    </child>
+                                  </object>
+                                </child>
+                              </object>
+                            </child>
+                            <child type="label">
+                              <object class="GtkLabel" id="prefs-label-search">
+                                <property name="visible">True</property>
+                                <property name="ypad">5</property>
+                                <property name="label" translatable="yes">&lt;b&gt;Search&lt;/b&gt;</property>
+                                <property name="use_markup">True</property>
+                              </object>
+                            </child>
+                          </object>
+                          <packing>
+                            <property name="expand">False</property>
+                            <property name="position">3</property>
                           </packing>
                         </child>
                       </object>
@@ -500,5 +596,10 @@
     <action-widgets>
       <action-widget response="0">PluginConfigClose</action-widget>
     </action-widgets>
+  </object>
+  <object class="GtkAction" id="action1"/>
+  <object class="GtkImage" id="image2">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
   </object>
 </interface>
